Bug 244304 - When dragging an item, the minus sign on that item is displayed throughout the operation regardless if the item was first selected
Summary: When dragging an item, the minus sign on that item is displayed throughout th...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (show other bugs)
Version: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-12 16:58 UTC by Leonardo La Malfa
Modified: 2010-08-19 19:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 4.6.0


Attachments
dolphin moving one directory (57.26 KB, image/png)
2010-08-02 11:05 UTC, FiNeX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Leonardo La Malfa 2010-07-12 16:58:56 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

I was reading this page* when I reached the paragraph titled "KDE (Dolphin file manager)" where they explore how do various desktop environments handle single clicking or other alternatives to double clicking. The issue I'm reporting here is illustrated in the third screenshot there, and I thought it would be nice to have this glitch addressed. Thanks!

*https://wiki.ubuntu.com/Ayatana/DoubleClick

Reproducible: Always




OS: Linux (i686) release 2.6.32-23-generic
Compiler: cc
Comment 1 FiNeX 2010-08-02 11:05:50 UTC
Created attachment 49746 [details]
dolphin moving one directory

Reproducible on 4.4.5 too.
Comment 2 FiNeX 2010-08-02 11:07:41 UTC
Steps to reproduce:

1) activate "+/-"

2) drag a file

3) the "-" sign appears over the icon even if unnecessary.
Comment 3 Peter Penz 2010-08-19 19:25:53 UTC
SVN commit 1165577 by ppenz:

Set the toggle invisible, if a mouse button has been pressed outside the toggle boundaries. This e.g. assures, that the toggle gets invisible during dragging items.

BUG: 244304
FIXED-IN: 4.6.0


 M  +15 -0     selectionmanager.cpp  
 M  +1 -0      selectionmanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1165577