Set the toggle invisible, if a mouse button has been pressed outside the toggle boundaries. This e.g. assures, that the toggle gets invisible during dragging items.

BUG: 244304
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdebase/apps/; revision=1165577